1. Updates shipyard UI: displays module damage thresholds and also the EMP protection a module provides, and also displays total ship EMP Protection in the ship data panel (in the same 'defensive stats' are as shield power etc.). 2. Adds two pseudo-categories to the Shipyard module menus - for armour modules. Armour modules can be defined isBulkhead or isPowerArmour without changing their module type (as ModuleType.Armor is essential for DamageVsArmor to work), and still be displayed in two separate fold-out menus. The menus themselves use localisation, so while I've supplied the default texts 'Power Armour' and 'Bulkheads' for the categories, they can actually be renamed (and therefore re-purposed) to suit a mod's needs.
--HG--
branch : The Doctor

--- a/Content/Localization/English/GameText_EN.xml
+++ b/Content/Localization/English/GameText_EN.xml
@@ -7862,6 +7862,14 @@ An empire's counter-espionage budget reduces your intelligence penetration
       <Index>6161</Index>
       <Text>AP Res</Text>
     </Token>
+	<Token>
+      <Index>6172</Index>
+      <Text>Power Armour</Text>
+    </Token>
+	<Token>
+      <Index>6173</Index>
+      <Text>Bulkhead</Text>
+    </Token>
 	
 	<!-- Shield Resists UI -->
 	
@@ -7904,6 +7912,30 @@ An empire's counter-espionage budget reduces your intelligence penetration
 	<Token>
       <Index>6171</Index>
       <Text>Beam SR</Text>
+    </Token>
+	<Token>
+      <Index>6172</Index>
+      <Text>Power Armour</Text>
+    </Token>
+	<Token>
+      <Index>6173</Index>
+      <Text>Bulkhead</Text>
+    </Token>
+	<Token>
+      <Index>6174</Index>
+      <Text>EMP Prot</Text>
+    </Token>
+	<Token>
+      <Index>6175</Index>
+      <Text>Dam Thr</Text>
+    </Token>
+	<Token>
+      <Index>6176</Index>
+      <Text>SDam Thr</Text>
+    </Token>
+	<Token>
+      <Index>6177</Index>
+      <Text>EMP Protection</Text>
     </Token>
 	
 	<!-- SD Code Mod, TOOLTIP TEXT -->	
@@ -8212,6 +8244,22 @@ An empire's counter-espionage budget reduces your intelligence penetration
 	<Token>
       <Index>7075</Index>
       <Text>Indicates shield bubble's resistance to beam weapon damage, where 100% is total immunity. Negative percentages mean the shield takes extra damage from that source.</Text>
+    </Token>
+	<Token>
+      <Index>7076</Index>
+      <Text>Indicates the amount of EMP protection that this module adds to the vessel.</Text>
+    </Token>
+	<Token>
+      <Index>7077</Index>
+      <Text>The total EMP protection of this design.</Text>
+    </Token>
+	<Token>
+      <Index>7078</Index>
+      <Text>Weapons that damage less than this threshold do no damage whatsoever to this module.</Text>
+    </Token>
+	<Token>
+      <Index>7079</Index>
+      <Text>Weapons that damage less than this threshold do no damage whatsoever to this shield.</Text>
     </Token>
   </TokenList>
 </LocalizationFile>
