- Toggle-able FTL overlay for main game screen including new artwork: shows planetary gravity wells and warp inhibitors as a transparent overlay on the map. - Minimap toggle buttons now light up and remain lit when toggled on, so one can see which buttons are on and off - Made planetary build bubbles prettier too.
--HG--
branch : The Doctor

--- a/Content/Localization/English/GameText_EN.xml
+++ b/Content/Localization/English/GameText_EN.xml
@@ -1028,11 +1028,11 @@ An empire's counter-espionage budget reduces your intelligence penetration
     </Token>
     <Token>
       <Index>253</Index>
-      <Text>Opens the ship list for your empire</Text>
+      <Text>Gravity Well/Inhibitor Overlay</Text>
     </Token>
     <Token>
       <Index>254</Index>
-      <Text>Opens a list of all known planets</Text>
+      <Text>Opens Planet Reconnaissance Panel</Text>
     </Token>
     <Token>
       <Index>255</Index>
