PLAYER-DEFINED CONSTRUCTION SHIP DESIGNS VIA THE AUTOMATION MENU. Have wanted to have this for literally years. I've put safeguards in to protect race XML not configured with a default construction ship. Also added modding support for a 'construction' module type and ruleset which requires that designs for constructors have a construction module; this only applies using the modding ruleset; in vanilla any valid freighter hull design with cargo space can be used.
This primarily allows for engine/range upgrades, but could theoretically be used for armouring or w/e too.

--HG--
branch : The Doctor

--- a/Content/Localization/English/GameText_EN.xml
+++ b/Content/Localization/English/GameText_EN.xml
@@ -7952,6 +7952,10 @@ An empire's counter-espionage budget reduces your intelligence penetration
       <Index>6180</Index>
       <Text>FTL Speed increased in this system by </Text>
     </Token>
+	<Token>
+      <Index>6181</Index>
+      <Text>Constructor Design:</Text>
+    </Token>
 	
 	<!-- SD Code Mod, TOOLTIP TEXT -->	
 	
