New: Ship weapons range overlay, toggles with F2 and the relevant minimap panel button. Displays an overlay bubble around ships showing their longest ranged weapon's maximum range. Player ships have green bubbles, other empires' ships have red bubbles. New: Minimap button panel re-arranged for tidiness, with new artwork for the overlay toggle buttons and colour-coding for the different button sets New: Each possible cause of a ship not being able to go to FTL now has its own unique status artwork - planetary gravity wells, hyperspace fluxes, inhibitor fields. New: Realistic lighting is on by default, toggle-able with F5. Stars' light radius expanded so larger star systems' extremities aren't pitch black with realistic lighting.
Fix: The 'Limit Game Speed' option now correctly limits game speed to 4x when ticked, instead of doing so when unticked (vanilla bug).
Fix: Ship's maximum weapons range calculation for AI and attack behaviours will now correctly factor in range-affecting upgrades and racial traits when calculating weapon range.
Fix: Ship status display will correctly recognise when they are prevented from FTL by gravity wells and not inhibitors; status UI wasn't taking scale of the planet (and therefore relative gravwell size) into account.
Fix: New Minimap overlays have their own tooltip texts now; had erroneously changed the tooltips of the game menus that now are on the top-bar but used the same tooltips.

Statement: The Doctor rules.

--HG--
branch : The Doctor

--- a/Content/Localization/English/GameText_EN.xml
+++ b/Content/Localization/English/GameText_EN.xml
@@ -1028,7 +1028,7 @@ An empire's counter-espionage budget reduces your intelligence penetration
     </Token>
     <Token>
       <Index>253</Index>
-      <Text>Gravity Well/Inhibitor Overlay</Text>
+      <Text>Opens the ships list, which allows you to browse, filter and control all the vessels under your command</Text>
     </Token>
     <Token>
       <Index>254</Index>
@@ -7956,6 +7956,16 @@ An empire's counter-espionage budget reduces your intelligence penetration
       <Index>6181</Index>
       <Text>Constructor Design:</Text>
     </Token>
+	
+	<Token>
+	<Index>6182</Index>
+	<Text>FTL Overlay: displays FTL inhibiting gravity wells and fields.</Text>
+	</Token>
+	
+	<Token>
+	<Index>6183</Index>
+	<Text>Weapons Range Overlay: visualises ships' maximum weapon range.</Text>
+	</Token>
 	
 	<!-- SD Code Mod, TOOLTIP TEXT -->	
 	
