--- a/Content/Localization/English/GameText_EN.xml
+++ b/Content/Localization/English/GameText_EN.xml
@@ -2992,7 +2992,7 @@ An empire's counter-espionage budget reduces your intelligence penetration
     </Token>
     <Token>
       <Index>1011</Index>
-      <Text>An ordnance supply bay allows a ship to launch resupply shuttles filled with ammunition to resupply friendly ships. Only one shuttle may be active per bay at a time. Supply shuttles can ferry 50 ordnance at a time.
+      <Text>An ordnance supply bay allows a ship to launch supply shuttles filled with ammunition to resupply friendly ships. Only one shuttle may be active per bay at a time. Supply shuttles can ferry 100 ordnance at a time.
       </Text>
     </Token>
     <Token>
