--- a/Content/Localization/English/GameText_EN.xml
+++ b/Content/Localization/English/GameText_EN.xml
@@ -7975,6 +7975,10 @@ An empire's counter-espionage budget reduces your intelligence penetration
       <Index>6185</Index>
       <Text>Toggle Zoom Tracking</Text>
     </Token>
+    <Token>
+      <Index>6186</Index>
+      <Text>Target Tracking</Text>
+    </Token>
     
 	<!-- SD Code Mod, TOOLTIP TEXT -->	
 	
