Another minor Localization fix, which should resolve issue #603
--HG--
branch : Gretman

--- a/Content/Localization/English/GameText_EN.xml
+++ b/Content/Localization/English/GameText_EN.xml
@@ -2789,7 +2789,7 @@ An empire's counter-espionage budget reduces your intelligence penetration
     </Token>
     <Token>
       <Index>958</Index>
-      <Text>Medium Fuel Cell</Text>
+      <Text>Medium Armored Fuel Cell</Text>
     </Token>
     <Token>
       <Index>959</Index>
